# stead

./: .gitignore  CLAUDE.md  NORTH_STAR.md  README.md  package.json
.github/workflows/: ci.yml
.stead/: contracts.jsonl
docs/plans/: README.md  architecture-principles.md  canonical-decisions-2026-02-11.md  contract-state-machine.md  control-room-ux.md  decisions-log.md  design-language.md  developer-onboarding.md  docs-authority-map.md  interaction-paradigm.md  mvp-scope.md  optimization-roadmap.md  phase2-revised.md  planning-baseline-2026-02-13.md  planning-first-roadmap-2026-02-11.md  product-vision.md  rewrite-parallel-track-m11-named-localhost.md  swiftui-components.md  test-strategy.md  universal-session-format.md  ux-refined.md  visionary-concepts.md
docs/plans/decisions/: agent-sdk-language.md  contract-schema-format.md  first-slice.md
docs/research/: agent-orchestration-2025.md  ai-cli-session-formats.md  architecture-review.md  brainstorm-2026-02-02.md  claude-integration-strategy.md  codex-adapter-enhanced.md  component-analysis-2026-02-02.md  concept-challenge-audit-2026-02-12.md  dx-review.md  exploration-contract-engine.md  exploration-control-room.md  exploration-execution-daemon.md  exploration-session-proxy.md  exploration-transformation-layer.md  ffi-comparison.md  github-research-browser-isolation.md  github-research-dev-environments.md  github-research-git-abstractions.md  github-research-workflow-engines.md  hallucination-feedback-loop.md  implementation-docs-concept-audit-2026-02-11.md  memory-systems.md  open-model-ecosystem.md  opencode-adapter-enhanced.md  performance-audit.md  plans-tech-selection-deep-audit-2026-02-11.md  prior-art-agno.md  prior-art-starred-repos.md  problem-analysis.md  step-by-step-decision-01-api-transport-2026-02-13.md  synthesis.md
macos/: .gitignore  build.sh
macos/Stead/: project.yml
macos/Stead/Resources/: Info.plist
rust/: .gitignore  Cargo.toml  README.md
rust/src/: lib.rs  main.rs
rust/src/cli/: mod.rs
rust/src/commands/: list.rs  mod.rs  run.rs  show.rs  verify.rs
rust/src/schema/: contract.rs
rust/src/storage/: jsonl.rs  mod.rs
rust/src/usf/: schema.rs
rust/stead-cli/: Cargo.toml
rust/stead-cli/src/: main.rs
rust/stead-cli/tests/: integration.rs
rust/stead-contracts/: Cargo.toml  README.md
rust/stead-contracts/src/: lib.rs
rust/stead-contracts/tests/: actor_permissions.rs  cancel_rollback.rs  contract_creation.rs  event_emission.rs  property_invariants.rs  smoke.rs  sqlite_atomic.rs  sqlite_concurrency.rs  sqlite_listing.rs  sqlite_projections.rs  sqlite_rebuild.rs  sqlite_schema.rs  transition_errors.rs  transition_matrix.rs  verification_outcome.rs
rust/stead-core/: Cargo.toml
rust/stead-core/src/cli/: mod.rs
rust/stead-core/src/commands/: cancel.rs  claim.rs  create.rs  list.rs  mod.rs  run.rs  session.rs  show.rs  verify.rs
rust/stead-core/src/schema/: contract.rs  mod.rs
rust/stead-core/src/storage/: jsonl.rs  mod.rs  sqlite.rs
rust/stead-core/src/usf/: mod.rs  schema.rs
rust/stead-core/src/usf/adapters/: claude.rs  codex.rs  mod.rs  opencode.rs
rust/stead-daemon/: Cargo.toml  README.md
rust/stead-daemon/src/: lib.rs
rust/stead-daemon/tests/: api_envelope.rs  contract_commands.rs  contract_listing_attention.rs  endpoint_api.rs  endpoint_events.rs  error_contract.rs  event_stream.rs  resource_contention.rs  slo_gates.rs  smoke.rs
rust/stead-endpoints/: Cargo.toml  README.md
rust/stead-endpoints/src/: lib.rs
rust/stead-endpoints/tests/: endpoint_leases.rs  negotiation.rs
rust/stead-ffi/: Cargo.toml  README.md
rust/stead-ffi/src/: lib.rs
rust/stead-module-sdk/: Cargo.toml  README.md
rust/stead-module-sdk/src/: lib.rs
rust/stead-module-sdk/tests/: context_generator_assembly.rs  context_generator_deterministic_fallback.rs  context_generator_provenance.rs  context_generator_provider_fallback.rs  module_toggle.rs  session_proxy_endpoint_mapping.rs  session_proxy_isolation.rs  session_proxy_lifecycle.rs  smoke.rs
rust/stead-resources/: Cargo.toml  README.md
rust/stead-resources/src/: lib.rs
rust/stead-resources/tests/: claim_release.rs  conflict_negotiation.rs  escalation_events.rs  smoke.rs
rust/stead-test-utils/: Cargo.toml
rust/stead-test-utils/fixtures/: sample.txt
rust/stead-usf/: Cargo.toml  README.md
rust/stead-usf/fixtures/claude/: partial_session.json  valid_session.json
rust/stead-usf/fixtures/codex/: corrupt_session.json  valid_session.json
rust/stead-usf/fixtures/opencode/: partial_session.json  valid_session.json
rust/stead-usf/src/: lib.rs
rust/stead-usf/tests/: adapter_resilience.rs  claude_conformance.rs  codex_conformance.rs  listing_contract.rs  opencode_conformance.rs  smoke.rs
rust/tests/: integration.rs
src/cli/: index.test.ts  index.ts  parser.test.ts  parser.ts
src/commands/: list.test.ts  list.ts  run.test.ts  run.ts  show.test.ts  show.ts  verify.test.ts  verify.ts
src/schema/: contract.test.ts  contract.ts
src/storage/: yaml.test.ts  yaml.ts
(+18 files in other folders)
