[package]
name = "stead-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for stead - operating environment for agent-driven development"
license = "MIT"
repository = "https://github.com/edhor1608/stead"

[[bin]]
name = "stead"
path = "src/main.rs"

[dependencies]
stead-daemon = { path = "../stead-daemon" }
stead-endpoints = { path = "../stead-endpoints" }
stead-contracts = { path = "../stead-contracts" }
stead-module-sdk = { path = "../stead-module-sdk" }
stead-resources = { path = "../stead-resources" }
stead-usf = { path = "../stead-usf" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
