[package]
name = "stead-core"
version = "0.2.0"
edition = "2021"
description = "Core library for stead - operating environment for agent-driven development"
license = "MIT"
repository = "https://github.com/edhor1608/stead"

[dependencies]
# CLI parsing (needed for Cli/Commands structs)
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime (for future HTTP API)
tokio = { version = "1", features = ["full"] }

# Home directory expansion for USF adapters
dirs = "5"

[dev-dependencies]
tempfile = "3"
