[package]
name = "stead-endpoints"
version = "0.1.0"
edition = "2024"
description = "Deterministic named localhost endpoint leasing for Stead-compatible runtimes."
license = "MIT"
repository = "https://github.com/edhor1608/stead"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
