[package]
name = "stead-ffi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
stead-contracts = { path = "../stead-contracts" }
stead-daemon = { path = "../stead-daemon" }
stead-usf = { path = "../stead-usf" }
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "2"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3"
