[package]
name = "stead-usf"
version = "0.1.0"
edition = "2024"
description = "Universal Session Format (USF) abstractions for cross-CLI session normalization."
license = "MIT"
repository = "https://github.com/edhor1608/stead"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
